--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -52,9 +52,15 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>We need access to your photo library to upload and share photos with friends.</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>We need access to your microphone to record audio for voice calls.</string>
 	<key>NSCameraUsageDescription</key>
-    <string>We require camera access to connect</string>
-    <key>NSMicrophoneUsageDescription</key>
-    <string>We require microphone access to connect</string>
+	<string>We need access to your camera to capture photos and videos for video calls.</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>We need your location to provide you with location-based services.</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>We need your location even when the app is in the background to provide you with continuous location-based services.</string>
 </dict>
 </plist>
