--- a/macos/Flutter/ephemeral/Flutter-Generated.xcconfig
+++ b/macos/Flutter/ephemeral/Flutter-Generated.xcconfig
@@ -1,6 +1,6 @@
 // This is a generated file; do not edit or check into version control.
-FLUTTER_ROOT=E:\esraa\flutter
-FLUTTER_APPLICATION_PATH=D:\yacotch_btb
+FLUTTER_ROOT=/Users/ziadelblidy/Developer/flutter
+FLUTTER_APPLICATION_PATH=/Users/ziadelblidy/Desktop/yacotch_btb
 COCOAPODS_PARALLEL_CODE_SIGN=true
 FLUTTER_BUILD_DIR=build
 FLUTTER_BUILD_NAME=1.0.0
