--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -148,6 +148,7 @@ dependencies:
   http_parser:
   google_fonts: ^4.0.4
   agora_uikit: ^1.3.6
+  flutter_callkit_incoming: 1.0.3+3
 dev_dependencies:
   flutter_test:
     sdk: flutter
