--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -149,6 +149,8 @@ dependencies:
   google_fonts: ^4.0.4
   agora_uikit: ^1.3.6
   flutter_callkit_incoming: 2.0.0
+  open_filex: ^4.3.4
+  easy_pdf_viewer: ^1.0.7
 dev_dependencies:
   flutter_test:
     sdk: flutter
