--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
 sdk.dir=C:\\Users\\Abdrabo\\AppData\\Local\\Android\\sdk
-flutter.sdk=E:\\esraa\\flutter
-flutter.buildMode=debug
+flutter.sdk=E:\\esraa\\flutter_windows_3.16.7-stable\\flutter
+flutter.buildMode=release
 flutter.versionName=1.0.0
-flutter.versionCode=1
+flutter.versionCode=2
