--- a/android/build.gradle
+++ b/android/build.gradle
@@ -18,6 +18,9 @@ allprojects {
         mavenCentral()
     }
 }
+configurations.all {
+    exclude group:"io.agora.rtc", module:"full-screen-sharing"
+}
 
 rootProject.buildDir = '../build'
 subprojects {
